--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Happy Birthday Website 2.0 | Aoudumber Bade">
     <meta name="github" content="https://github.com/Aoudumber-Bade">
-    <title>Mehwish Birthday</title>
+    <title>Shree Birthday</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -54,7 +54,7 @@
                 <div class="btn">
                     <button id="btn__letter">
                         <div class="mail">
-                            Click Here Mehwish
+                            Click Here Nidhi
                             <i class="fa-regular fa-envelope"></i>
                         </div>
                     </button>
@@ -64,11 +64,11 @@
             <div class="right">
                 <div class="box__account">
                     <div class="image">
-                        <img src="./images/unnamed.png" alt="">
+                        <img src="./images/shree.png" alt="">
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>Dear Mehwish</span>
+                        <span>Dear Nidhi</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
@@ -127,9 +127,9 @@
             <div class="boxMail-container">
                 <div class="card1">
                     <div class="userImg">
-                        <img src="images/unnamed.png" alt="">
+                        <img src="images/shree.png" alt="">
                     </div>
-                    <h4 class="username">To: Mehwish 💖<span class="underline"></span></h4>
+                    <h4 class="username">To: Nidhi 💖<span class="underline"></span></h4>
 
                     <h3>Happy Birthday</h3>
                     <div class="imageCute">
@@ -139,13 +139,7 @@
                 <div class="card2">
                     <div class="card2-content">
                         <h3>To You!</h3>
-                        <h2>Happy birthday 🥳🎂🥳 chanda the day you come into my life I was not really much attached to
-                            you but day by day you became close to my heart . And now you are truly my younger sister. I
-                            wish I could remove some of the pain from your life which you are bearing alone. But you're
-                            always welcome 🤗 you can talk anytime you want to talk specially those which you can't say
-                            to others. And this year your all dreams come true . I wish that your
-                            brother could wish you but if couldn't wish on him behalf I am wishing you happy birthday
-                            🎈🎂🎈 sana . Don't be Sad ok be happy 😌
+                        <h2>Happy birthday 🥳🎂🥳 Shree.Happy irru dei
                         </h2>
 
                         <div class="imageCute2">
@@ -159,7 +153,7 @@
 
 </body>
 <script>
-    let datetxt = "27 May";
+    let datetxt = "28 July";
     let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
@@ -258,6 +252,21 @@
     close.addEventListener('click', function () {
         boxmail.classList.remove('active')
     })
+    </script>
+<script>
+    // Toggle image source on click inside .box__account .image
+    document.addEventListener('DOMContentLoaded', function () {
+        const imageDiv = document.querySelector('.box__account .image img');
+        if (imageDiv) {
+            imageDiv.addEventListener('click', function () {
+                const currentSrc = imageDiv.getAttribute('src');
+                if (currentSrc === './images/shree.png') {
+                    imageDiv.setAttribute('src', './images/nidhi.png');
+                } else {
+                    imageDiv.setAttribute('src', './images/shree.png');
+                }
+            });
+        }
+    });
 </script>
-
 </html>
