--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
                 <div class="card2">
                     <div class="card2-content">
                         <h3>To You!</h3>
-                        <h2>Happy birthday 🥳🎂🥳 Shree.Happy irru dei
+                         <!-- <img src="images/shree.png" alt=""> -->
+                        <h2 style="margin:50px;">
+                            Many more happy returns of the day🥳🎂🥳.
+                            Happy yaa irru...Jolly aa irru...santhosama irru...😊
+                            Marakaama Treat Vachidu🕺😌💕
                         </h2>
 
                         <div class="imageCute2">
