--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="date__of__birth">
-                    <span></span>
+                    <span style="color: #fff;"></span>
                 </div>
                 <div class="btn">
                     <button id="btn__letter">
@@ -157,7 +157,7 @@
 
 </body>
 <script>
-    let datetxt = "28 July";
+    let datetxt = "Shree✨";
     let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
